import { DocumentStatus, type ValueOf } from "@transcripta/shared";

import {
	DEFAULT_BUDGET_USD,
	DEFAULT_SPENT_USD,
	MIN_NUMBER_OF_FAILED_PAGES,
} from "./libs/constants/constants.js";
import { DocumentErrorMessage } from "./libs/enums/enums.js";
import { type DocumentGetAllItemResponseDto } from "./libs/types/types.js";

type DocumentStatusValue = ValueOf<typeof DocumentStatus>;

type Preset = {
	outputSchema?: null | Record<string, unknown>;
	settings: {
		blankStdevThreshold?: number;
		model?: string;
	};
};

class DocumentEntity {
	private budgetUsd: string;

	private createdAt: string;

	private cursorPageNo: number;

	private id: null | number;

	private ownerId: number;

	private pageCount: number;

	private pagesFailed: number;

	private preset: null | Preset;

	private presetId: number;

	private sourceBytes: null | number;

	private sourceKey: null | string;

	private sourceName: null | string;

	private spentUsd: string;

	private status: DocumentStatusValue;

	private title: string;

	private constructor({
		budgetUsd,
		createdAt,
		cursorPageNo,
		id,
		ownerId,
		pageCount,
		pagesFailed,
		preset,
		presetId,
		sourceBytes,
		sourceKey,
		sourceName,
		spentUsd,
		status,
		title,
	}: {
		budgetUsd: string;
		createdAt: string;
		cursorPageNo: number;
		id: null | number;
		ownerId: number;
		pageCount: number;
		pagesFailed?: number;
		preset?: null | Preset;
		presetId: number;
		sourceBytes: null | number;
		sourceKey: null | string;
		sourceName: null | string;
		spentUsd: string;
		status: DocumentStatusValue;
		title: string;
	}) {
		this.budgetUsd = budgetUsd;
		this.createdAt = createdAt;
		this.cursorPageNo = cursorPageNo;
		this.id = id;
		this.ownerId = ownerId;
		this.pageCount = pageCount;
		this.pagesFailed = pagesFailed ?? MIN_NUMBER_OF_FAILED_PAGES;
		this.preset = preset ?? null;
		this.presetId = presetId;
		this.sourceBytes = sourceBytes;
		this.sourceKey = sourceKey;
		this.sourceName = sourceName;
		this.spentUsd = spentUsd;
		this.status = status;
		this.title = title;
	}

	public static initialize({
		budgetUsd,
		createdAt,
		cursorPageNo,
		id,
		ownerId,
		pageCount,
		pagesFailed,
		preset,
		presetId,
		sourceBytes,
		sourceKey,
		sourceName,
		spentUsd,
		status,
		title,
	}: {
		budgetUsd: string;
		createdAt: string;
		cursorPageNo: number;
		id: number;
		ownerId: number;
		pageCount: number;
		pagesFailed?: number;
		preset?: Preset;
		presetId: number;
		sourceBytes?: null | number;
		sourceKey?: null | string;
		sourceName?: null | string;
		spentUsd: string;
		status: DocumentStatusValue;
		title: string;
	}): DocumentEntity {
		return new DocumentEntity({
			budgetUsd,
			createdAt,
			cursorPageNo,
			id,
			ownerId,
			pageCount,
			pagesFailed: pagesFailed ?? MIN_NUMBER_OF_FAILED_PAGES,
			preset: preset ?? null,
			presetId,
			sourceBytes: sourceBytes ?? null,
			sourceKey: sourceKey ?? null,
			sourceName: sourceName ?? null,
			spentUsd,
			status,
			title,
		});
	}

	public static initializeNew({
		ownerId,
		presetId,
		sourceBytes,
		sourceKey,
		sourceName,
		title,
	}: {
		ownerId: number;
		presetId: number;
		sourceBytes?: number;
		sourceKey?: string;
		sourceName?: string;
		title: string;
	}): DocumentEntity {
		return new DocumentEntity({
			budgetUsd: DEFAULT_BUDGET_USD,
			createdAt: "",
			cursorPageNo: 1,
			id: null,
			ownerId,
			pageCount: 0,
			pagesFailed: 0,
			presetId,
			sourceBytes: sourceBytes ?? null,
			sourceKey: sourceKey ?? null,
			sourceName: sourceName ?? null,
			spentUsd: DEFAULT_SPENT_USD,
			status: DocumentStatus.DRAFT,
			title,
		});
	}

	public getPresetId(): number {
		return this.presetId;
	}

	public toNewObject(): {
		ownerId: number;
		pageCount: number;
		presetId: number;
		sourceBytes: null | number;
		sourceKey: null | string;
		sourceName: null | string;
		status: DocumentStatusValue;
		title: string;
	} {
		return {
			ownerId: this.ownerId,
			pageCount: this.pageCount,
			presetId: this.presetId,
			sourceBytes: this.sourceBytes,
			sourceKey: this.sourceKey,
			sourceName: this.sourceName,
			status: this.status,
			title: this.title,
		};
	}

	public toObject(): DocumentGetAllItemResponseDto {
		if (this.id === null) {
			throw new Error("Document ID is null. Entity must be persisted first.");
		}

		return {
			budgetUsd: this.budgetUsd,
			createdAt: this.createdAt,
			cursorPageNo: this.cursorPageNo,
			id: this.id,
			ownerId: this.ownerId,
			pageCount: this.pageCount,
			pagesFailed: this.pagesFailed,
			spentUsd: this.spentUsd,
			status: this.status,
			title: this.title,
		};
	}

	public toObjectWithPreset(): DocumentGetAllItemResponseDto & {
		preset: Preset;
		presetId: number;
		sourceKey: string;
	} {
		if (this.sourceKey === null) {
			throw new Error(DocumentErrorMessage.NO_SOURCE_KEY);
		}

		if (this.preset === null) {
			throw new Error(DocumentErrorMessage.NO_PRESET);
		}

		return {
			...this.toObject(),
			preset: this.preset,
			presetId: this.presetId,
			sourceKey: this.sourceKey,
		};
	}
}

export { DocumentEntity };
